environments/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: software-agent-app
spec:
  selector:
    matchLabels:
      app: software-agent-app
  template:
    metadata:
      labels:
        app: software-agent-app
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: software-agent-app
          image: ghcr.io/simonbrundin/software-agent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
