environments/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: software-agent-service
spec:
  selector:
    app: software-agent-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
